[package]
name = "dwarf_json"
version = "0.1.0"
edition = "2024"

[lib]
name = "dwarf_json"
path = "src/lib.rs"

[[bin]]
name = "dwarf_json"
path = "src/main.rs"

# We read our own DWARF at runtime, so every profile needs a .dSYM and a
# real frame pointer (the latter also comes from .cargo/config.toml).
[profile.dev]
split-debuginfo = "packed"

[profile.release]
debug = true
split-debuginfo = "packed"

[profile.bench]
debug = true
split-debuginfo = "packed"

[dependencies]
gimli = "0.33.0"
memmap2 = "0.9.10"
object = "0.39.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
cranelift-jit = "0.131.1"
cranelift-module = "0.131.1"
cranelift-codegen = "0.131.1"
cranelift-frontend = "0.131.1"
framehop = "0.16.0"

[dev-dependencies]
criterion = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
facet = "0.46.2"
facet-json = "0.46.1"

[[bench]]
name = "de"
harness = false
